--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Duke Food Wrapped 😈</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
     <style>
         body {
@@ -25,6 +26,10 @@
 
         .duke-blue {
             color: #012169;
+        }
+
+        .bg-duke {
+            background-color: #012169;
         }
 
         .card {
@@ -47,27 +52,44 @@
             margin-right: 8px;
             flex-shrink: 0;
         }
+
+        /* This is the hidden card we will screenshot */
+        #insta-card {
+            width: 1080px;
+            height: 1920px;
+            position: absolute;
+            left: -9999px;
+            /* Hide it off-screen */
+            top: 0;
+            background: linear-gradient(180deg, #012169 0%, #00539B 100%);
+            color: white;
+            padding: 80px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            font-family: sans-serif;
+        }
     </style>
 </head>
 
-<body class="font-sans text-gray-800">
+<body class="font-sans text-gray-800 flex flex-col min-h-screen">
 
-    <div class="max-w-4xl mx-auto p-6 md:p-12">
+    <div class="flex-grow max-w-4xl mx-auto p-6 md:p-12 w-full">
         <div class="text-center mb-8">
             <h1 class="text-5xl font-extrabold duke-blue mb-2 tracking-tight">Duke Food Wrapped 😈</h1>
             <p class="text-gray-500">Your unofficial Fall 2025 dining recap.</p>
         </div>
 
-        <div class="bg-white p-6 rounded-xl shadow-sm mb-8 border-l-4 border-blue-900">
+        <div id="instructions" class="bg-white p-6 rounded-xl shadow-sm mb-8 border-l-4 border-blue-900">
             <h3 class="font-bold text-lg mb-4 text-gray-700">How to get your data (Mac/PC Outlook App):</h3>
             <ul class="space-y-3 text-sm text-gray-600">
                 <li class="flex items-start">
                     <span class="step-number">1</span>
-                    <span class="mt-0.5">Open the <b>Outlook Desktop App</b>. (Works best on Mac).</span>
+                    <span class="mt-0.5">Open the <b>Outlook Desktop App</b>.</span>
                 </li>
                 <li class="flex items-start">
                     <span class="step-number">2</span>
-                    <span class="mt-0.5">Copy and paste this exact search command:
+                    <span class="mt-0.5">Copy/Paste this search:
                         <br>
                         <code
                             class="bg-gray-100 px-2 py-1 mt-2 inline-block rounded text-blue-800 font-mono select-all">from:mobileorder@transactcampus.com received:>08/09/2025</code>
@@ -75,16 +97,12 @@
                 </li>
                 <li class="flex items-start">
                     <span class="step-number">3</span>
-                    <span class="mt-0.5"><b>Select All</b> emails (Cmd+A).</span>
+                    <span class="mt-0.5"><b>Select All</b> (Cmd+A) and Drag to Desktop to get <code
+                            class="text-xs border border-gray-300 px-1 rounded">.eml</code> files.</span>
                 </li>
                 <li class="flex items-start">
                     <span class="step-number">4</span>
-                    <span class="mt-0.5"><b>Drag and Drop</b> the selected emails to your Desktop (creates .eml
-                        files).</span>
-                </li>
-                <li class="flex items-start">
-                    <span class="step-number">5</span>
-                    <span class="mt-0.5">Drag those files into the box below.</span>
+                    <span class="mt-0.5">Drop them below.</span>
                 </li>
             </ul>
         </div>
@@ -93,10 +111,23 @@
             class="drop-zone bg-white p-16 rounded-2xl text-center cursor-pointer shadow-sm hover:shadow-md">
             <div class="text-6xl mb-4">📅</div>
             <p class="text-xl font-medium text-gray-600">Drop .EML files here</p>
-            <p class="text-sm text-gray-400 mt-2"><b>Privacy:</b> Processed 100% locally in your browser.</p>
+            <p class="text-sm text-gray-400 mt-2">Privacy: Processed 100% locally.</p>
         </div>
 
         <div id="results" class="hidden mt-10 space-y-8">
+
+            <div class="text-center">
+                <button onclick="downloadStory()"
+                    class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform transition hover:scale-105 flex items-center mx-auto gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+                    </svg>
+                    Download for Instagram Story
+                </button>
+            </div>
+
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="card p-6 border-t-4 border-blue-900 text-center">
                     <p class="text-xs font-bold uppercase tracking-widest text-gray-400">Total Spent</p>
@@ -105,7 +136,6 @@
                 <div class="card p-6 border-t-4 border-blue-700 text-center">
                     <p class="text-xs font-bold uppercase tracking-widest text-gray-400">Total Orders</p>
                     <p id="total-orders" class="text-4xl font-extrabold duke-blue mt-2">0</p>
-                    <p id="skipped-orders" class="text-xs text-gray-400 mt-1 hidden">0 skipped (too old)</p>
                 </div>
                 <div class="card p-6 border-t-4 border-blue-500 text-center">
                     <p class="text-xs font-bold uppercase tracking-widest text-gray-400">Top Spot</p>
@@ -131,143 +161,140 @@
         </div>
     </div>
 
-    <script>
-        // --- CONFIGURATION ---
-        // We keep this as a failsafe in case they drag old files anyway
-        const FILTER_DATE = new Date("2025-08-09");
+    <footer class="text-center py-6 text-gray-400 text-sm">
+        Built by <a href="https://github.com/jamesmu03" class="text-blue-600 hover:underline">James Mu</a>
+    </footer>
 
+    <div id="insta-card">
+        <div>
+            <h1 class="text-8xl font-black mb-4">DUKE<br>FOOD<br>WRAPPED</h1>
+            <p class="text-4xl opacity-80 font-mono">FALL 2025</p>
+        </div>
+
+        <div class="space-y-12">
+            <div>
+                <p class="text-3xl font-bold uppercase opacity-70 mb-2">Total Spent</p>
+                <p id="story-spent" class="text-9xl font-black text-white">$0</p>
+            </div>
+
+            <div>
+                <p class="text-3xl font-bold uppercase opacity-70 mb-4">Top Restaurant</p>
+                <p id="story-spot" class="text-7xl font-bold text-yellow-400">McDonald's</p>
+            </div>
+
+            <div>
+                <p class="text-3xl font-bold uppercase opacity-70 mb-6">Top 3 Cravings</p>
+                <ul id="story-items" class="text-4xl font-semibold space-y-4">
+                </ul>
+            </div>
+        </div>
+
+        <div class="text-center border-t border-white/30 pt-8">
+            <p class="text-2xl font-mono opacity-60">built by james mu</p>
+        </div>
+    </div>
+
+    <script>
+        // --- LOGIC ---
+        const FILTER_DATE = new Date("2025-08-09");
         const dropZone = document.getElementById('drop-zone');
         const resultsDiv = document.getElementById('results');
 
-        let globalStats = { spent: 0, count: 0, skipped: 0, restaurants: {}, items: {} };
+        let globalStats = { spent: 0, count: 0, restaurants: {}, items: {} };
 
+        // Drag & Drop
         dropZone.addEventListener('dragover', (e) => { e.preventDefault(); dropZone.classList.add('dragover'); });
         dropZone.addEventListener('dragleave', () => dropZone.classList.remove('dragover'));
-
         dropZone.addEventListener('drop', async (e) => {
             e.preventDefault();
             dropZone.classList.remove('dragover');
-
             const files = Array.from(e.dataTransfer.files).filter(f => f.name.toLowerCase().endsWith(".eml"));
-
-            if (files.length === 0) {
-                alert("Please drop .eml files (exported from Outlook).");
-                return;
-            }
+            if (files.length === 0) { alert("Please drop .eml files."); return; }
 
             dropZone.innerHTML = `<p class="text-blue-600 animate-pulse font-bold">Processing ${files.length} receipts...</p>`;
-
-            for (let file of files) {
-                await parseEML(file);
-            }
-
+            for (let file of files) await parseEML(file);
             displayResults();
         });
 
+        // Email Parsing
         function decodeQuotedPrintable(str) {
-            return str
-                .replace(/=[\r\n]+/g, "")
-                .replace(/=([0-9A-F]{2})/gi, (m, p1) => String.fromCharCode(parseInt(p1, 16)));
+            return str.replace(/=[\r\n]+/g, "").replace(/=([0-9A-F]{2})/gi, (m, p1) => String.fromCharCode(parseInt(p1, 16)));
         }
 
         async function parseEML(file) {
             const rawText = await file.text();
 
-            // 1. SAFETY CHECK: DATE HEADER
             const dateMatch = rawText.match(/^Date:\s*(.+)$/m);
             if (dateMatch) {
                 const emailDate = new Date(dateMatch[1]);
-                if (!isNaN(emailDate) && emailDate < FILTER_DATE) {
-                    globalStats.skipped++;
-                    return;
-                }
+                if (!isNaN(emailDate) && emailDate < FILTER_DATE) return;
             }
 
-            // 2. ISOLATE HTML
             const parts = rawText.split('Content-Type: text/html');
             if (parts.length < 2) return;
 
             let htmlContent = parts[1];
             const boundaryMatch = rawText.match(/boundary="?([^"\s]+)"?/);
-            if (boundaryMatch) {
-                const boundary = boundaryMatch[1];
-                htmlContent = htmlContent.split("--" + boundary)[0];
-            }
+            if (boundaryMatch) htmlContent = htmlContent.split("--" + boundaryMatch[1])[0];
 
-            // 3. PARSE HTML
-            const cleanHTML = decodeQuotedPrintable(htmlContent);
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(cleanHTML, "text/html");
+            const doc = new DOMParser().parseFromString(decodeQuotedPrintable(htmlContent), "text/html");
 
-            // A. PRICE
+            // Price
             let orderTotal = 0;
-            const allText = doc.body.textContent;
-            const priceMatches = allText.match(/\$\s?(\d+\.\d{2})/g);
-            if (priceMatches) {
-                const prices = priceMatches.map(p => parseFloat(p.replace(/[^0-9.]/g, '')));
-                orderTotal = Math.max(...prices);
-            }
+            const priceMatches = doc.body.textContent.match(/\$\s?(\d+\.\d{2})/g);
+            if (priceMatches) orderTotal = Math.max(...priceMatches.map(p => parseFloat(p.replace(/[^0-9.]/g, ''))));
 
             if (orderTotal > 0) {
                 globalStats.spent += orderTotal;
                 globalStats.count++;
             }
 
-            // B. RESTAURANT
+            // Restaurant
             const allTds = Array.from(doc.querySelectorAll('td'));
             for (let i = 0; i < allTds.length; i++) {
                 if (allTds[i].textContent.includes("Target:")) {
-                    const parentRow = allTds[i].closest('tr');
-                    const nextRow = parentRow ? parentRow.nextElementSibling : null;
+                    const nextRow = allTds[i].closest('tr')?.nextElementSibling;
                     if (nextRow) {
-                        let restaurantName = nextRow.textContent.trim();
-                        restaurantName = restaurantName.replace(/Duke University/g, "").replace(/Science Drive/g, "").trim();
-                        if (restaurantName && restaurantName.length > 2) {
-                            globalStats.restaurants[restaurantName] = (globalStats.restaurants[restaurantName] || 0) + 1;
-                        }
+                        let name = nextRow.textContent.trim().replace(/Duke University/g, "").replace(/Science Drive/g, "").trim();
+                        if (name.length > 2) globalStats.restaurants[name] = (globalStats.restaurants[name] || 0) + 1;
                     }
                     break;
                 }
             }
 
-            // C. ITEMS
+            // Items
             for (let i = 0; i < allTds.length; i++) {
                 const text = allTds[i].textContent.trim();
                 if (text.match(/^\d+\.\s+/)) {
-                    let itemName = text.replace(/^\d+\.\s+/, "");
-                    itemName = itemName.split("$")[0].trim();
-                    const noise = ["subtotal", "tax", "total", "dukecard"];
-                    if (!noise.some(n => itemName.toLowerCase().includes(n)) && itemName.length > 2) {
-                        globalStats.items[itemName] = (globalStats.items[itemName] || 0) + 1;
+                    let name = text.replace(/^\d+\.\s+/, "").split("$")[0].trim();
+                    if (!["subtotal", "tax", "total", "dukecard"].some(n => name.toLowerCase().includes(n)) && name.length > 2) {
+                        globalStats.items[name] = (globalStats.items[name] || 0) + 1;
                     }
                 }
             }
         }
 
+        // Display
         function displayResults() {
             dropZone.style.display = 'none';
+            document.getElementById('instructions').style.display = 'none';
             resultsDiv.classList.remove('hidden');
 
-            document.getElementById('total-spent').innerText = "$" + globalStats.spent.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+            const spentStr = "$" + globalStats.spent.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+            document.getElementById('total-spent').innerText = spentStr;
             document.getElementById('total-orders').innerText = globalStats.count;
 
-            if (globalStats.skipped > 0) {
-                const skipEl = document.getElementById('skipped-orders');
-                skipEl.innerText = `${globalStats.skipped} skipped (before Aug 9)`;
-                skipEl.classList.remove('hidden');
-            }
-
             const sortedRestaurants = Object.entries(globalStats.restaurants).sort((a, b) => b[1] - a[1]);
-            if (sortedRestaurants.length > 0) document.getElementById('top-spot').innerText = sortedRestaurants[0][0];
+            const topSpot = sortedRestaurants.length > 0 ? sortedRestaurants[0][0] : "None";
+            document.getElementById('top-spot').innerText = topSpot;
 
-            // Chart
-            const ctx = document.getElementById('restaurantChart').getContext('2d');
-            new Chart(ctx, {
+            // Update Chart
+            new Chart(document.getElementById('restaurantChart').getContext('2d'), {
                 type: 'doughnut',
                 data: {
-                    labels: sortedRestaurants.slice(0, 8).map(x => x[0]),
+                    labels: sortedRestaurants.slice(0, 6).map(x => x[0]),
                     datasets: [{
-                        data: sortedRestaurants.slice(0, 8).map(x => x[1]),
+                        data: sortedRestaurants.slice(0, 6).map(x => x[1]),
                         backgroundColor: ['#012169', '#00539B', '#C84E00', '#E89923', '#A1B70D', '#333333'],
                         borderWidth: 0
                     }]
@@ -275,15 +302,35 @@
                 options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { position: 'right' } } }
             });
 
-            // List
+            // Update Lists
             const sortedItems = Object.entries(globalStats.items).sort((a, b) => b[1] - a[1]);
             const list = document.getElementById('item-list');
             list.innerHTML = "";
             sortedItems.slice(0, 10).forEach(([name, qty], i) => {
-                const li = document.createElement('li');
-                li.className = "flex justify-between items-center py-2 border-b border-gray-100";
-                li.innerHTML = `<span class="text-sm font-medium text-gray-700 truncate w-3/4">${i + 1}. ${name}</span> <span class="text-xs bg-blue-100 text-blue-800 px-2 py-1 rounded-full">${qty}</span>`;
-                list.appendChild(li);
+                list.innerHTML += `<li class="flex justify-between py-2 border-b border-gray-100"><span class="text-sm truncate w-3/4">${i + 1}. ${name}</span><span class="text-xs bg-blue-100 text-blue-800 px-2 rounded-full">${qty}</span></li>`;
+            });
+
+            // --- POPULATE HIDDEN INSTAGRAM CARD ---
+            document.getElementById('story-spent').innerText = "$" + Math.round(globalStats.spent).toLocaleString(); // No cents for Story
+            document.getElementById('story-spot').innerText = topSpot;
+            const storyList = document.getElementById('story-items');
+            storyList.innerHTML = "";
+            sortedItems.slice(0, 3).forEach(([name, qty], i) => {
+                storyList.innerHTML += `<li class="flex items-center gap-4"><span class="bg-white/20 px-3 py-1 rounded">#${i + 1}</span> <span>${name}</span></li>`;
+            });
+        }
+
+        // Export Function
+        function downloadStory() {
+            const card = document.getElementById('insta-card');
+
+            // html2canvas needs the element to be in the DOM and visible (technically).
+            // Since it's position:absolute left:-9999px, it works fine.
+            html2canvas(card, { scale: 1 }).then(canvas => {
+                const link = document.createElement('a');
+                link.download = 'duke-food-wrapped.png';
+                link.href = canvas.toDataURL();
+                link.click();
             });
         }
     </script>
